syntax = "proto3";

package api.server.compute.v1;

import "google/api/annotations.proto";

option go_package = "github.com/mohaijiang/computeshare-server/api/compute/v1;v1";
option java_multiple_files = true;
option java_package = "api.compute.v1";

service Storage {
	rpc List (ListRequest) returns (ListReply){
		option (google.api.http) = {
			get: "/v1/storage",
		};
	};
	rpc UploadFile (UploadFileRequest) returns (UploadFileReply){
		option (google.api.http) = {
			post: "/v1/storage",
			body: "*"
		};
	};
	rpc CreateDir (CreateDirRequest) returns (CreateDirReply){
		option (google.api.http) = {
			post: "/v1/storage/dir",
			body: "*"
		};
	}
	rpc Download (DownloadRequest) returns (DownloadReply){
		option (google.api.http) = {
			get: "/v1/storage/{id}",
		};
	};
	rpc Delete (DeleteRequest) returns (DeleteReply){
		option (google.api.http) = {
			delete: "/v1/storage",
		};
	};
}

message UploadFileRequest {
	bytes body = 1;
	string name = 2;
	optional string parent_id = 3;
}

message UploadFileReply{
	int32 code = 1;
	string message = 2;
	File data = 3;
}

message DownloadRequest {
	string id = 1;
}
message DownloadReply {
	message Data {
		bytes body = 1;
		string name = 2;
	}
	int32 code = 1;
	string message = 2;
	Data data = 3;
}

message DeleteRequest {
	repeated string ids = 1;
}
message DeleteReply {
	int32 code = 1;
	string message = 2;
}

enum FileType {
	DIR = 0;
	FILE = 1;
}

message File {
	string id = 1;
	FileType type = 2;
	string name = 3;
	int32 size = 4;
	int64 last_modify = 5;
	optional string cid = 6;

}

message ListRequest {
	string parent_id = 1;
}
message ListReply {
	int32 code = 1;
	string message = 2;
	repeated File data = 3;
}

message CreateDirRequest {
	string name = 1;
	string parent_id = 2;
}

message CreateDirReply {
	message Data {
		string id = 1;
	}
	int32 code = 1;
	string message = 2;
	Data data = 3;
}
